--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -11,4 +11,5 @@
         'components/menu',
         'components/logo',
         'components/button',
+        'components/hero',
         'components/search';
