--- a/app/styles/abstracts/_variables.scss
+++ b/app/styles/abstracts/_variables.scss
@@ -34,3 +34,5 @@ $shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 $shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
 $shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
 $shadow-none: 0 0 #0000;
+
+$full: 100%;
