--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -1,5 +1,5 @@
 
-body {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -7,6 +7,7 @@ body {
 
 .container {
     max-width: 1400px;
+    height: 100%;
     margin: 0 auto;
     padding: 0 20px;
 }
