--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -12,4 +12,6 @@
         'components/logo',
         'components/button',
         'components/hero',
-        'components/search';
+        'components/search',
+        'components/tab',
+        'components/categories';
