Making Sale Products slider and Marquee News slider

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -14,4 +14,12 @@
         'components/hero',
         'components/search',
         'components/tab',
-        'components/categories';
+        'components/heading',
+        'components/discount',
+        'components/newsSlider',
+        'components/categories',
+
+
+        // Products
+        'components/products/productsSlider',
+        'components/products/productCard';
