--- a/app/styles/components/_categories.scss
+++ b/app/styles/components/_categories.scss
@@ -49,3 +49,10 @@
         }
     }
 }
+
+.categories__content {
+    padding: 40px 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: $gap-30;
+}
