--- a/app/styles/components/_tab.scss
+++ b/app/styles/components/_tab.scss
@@ -15,14 +15,15 @@
     list-style: none;
     color: black;
     cursor: pointer;
+    transition: 0.3s all;
 
     .tab__icon {
-        color: #262626;
+        color: $bg-dark;
     }
 
     &.active {
-        border: #262626 1px solid;
-        background-color: #262626;
+        border: $bg-dark 1px solid;
+        background-color: $bg-dark;
         color: white;
 
         .tab__icon {
@@ -30,12 +31,17 @@
         }
     }
 
-    &:hover {
-        background-color: rgba(232, 232, 232, 0.912);
+    &:hover .tab__label {
+        transition: 0.3s all;
+        color: gray;
     }
 
     &.active:hover {
         background-color: #262626fa;
+
+        & .tab__label {
+            color: white;
+        }
     }
 
 }
