--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -20,6 +20,9 @@
         'components/categories',
 
 
+        // Banners
+        'components/banners/doubleBanner',
+
         // Products
         'components/products/productsSlider',
         'components/products/productCard';
