Making Sale banner

--- a/app/styles/components/banners/_doubleBanner.scss
+++ b/app/styles/components/banners/_doubleBanner.scss
@@ -1,7 +1,7 @@
 .double-banner {
     width: 100%;
     height: auto;
-    padding-top: 70px;
+    padding: 70px 0px;
 
     &__inner {
         display: grid;
