--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -22,6 +22,7 @@
 
         // Banners
         'components/banners/doubleBanner',
+        'components/banners/saleBanner',
 
         // Products
         'components/products/productsSlider',
