Making shoe images zoom modal

--- a/app/styles/components/_tab.scss
+++ b/app/styles/components/_tab.scss
@@ -44,4 +44,10 @@
         }
     }
 
+    .tab__label.colored {
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+    }
+
 }
