--- a/app/styles/components/products/_productDetailsGallery.scss
+++ b/app/styles/components/products/_productDetailsGallery.scss
@@ -86,6 +86,7 @@
         width: $full;
         height: $full;
         object-fit: contain;
+        cursor: zoom-in;
     }
 
     .gallery__like-icon {
