--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -25,6 +25,8 @@
         'components/collectionTopbar',
         'components/breadcrumbs',
         'components/pagination',
+        'components/zoomModal',
+        'components/zoom',
 
 
         // Banners
