Making Drawer ui an functionality

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -27,6 +27,7 @@
         'components/pagination',
         'components/zoomModal',
         'components/zoom',
+        'components/drawer',
 
 
         // Banners
