Setup Prisma and NextAuth

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -28,7 +28,15 @@
         'components/zoomModal',
         'components/zoom',
         'components/drawer',
+        'components/counter',
 
+
+        // Drawer Views
+        'components/drawerViews/cart',
+
+        // Cart
+        'components/cart/cart',
+        'components/cart/cartItem',
 
         // Banners
         'components/banners/doubleBanner',
