--- a/app/styles/components/_drawer.scss
+++ b/app/styles/components/_drawer.scss
@@ -14,9 +14,17 @@
         right: 0;
         top: 0;
 
-        & > div {
+        &-wrapper {
             height: 100%;
             width: auto;
+            position: relative;
+
+            .drawer__close {
+                position: absolute;
+                top: 20px;
+                right: 20px;
+                cursor: pointer;
+            }
         }
     }
 }
