--- a/app/styles/components/_menu.scss
+++ b/app/styles/components/_menu.scss
@@ -9,6 +9,7 @@
     & .menu__item {
         width: 100%;
         height: 100%;
+        padding: 15px 10px;
         font-size: $text-lg;
         cursor: pointer;
         transition: all 0.2s;
