--- a/app/styles/components/ui/_modalDropdown.scss
+++ b/app/styles/components/ui/_modalDropdown.scss
@@ -99,4 +99,14 @@
         }
     }
 
+    &__disable {
+        width: $full;
+        height: $full;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0.73);
+
+    }
+
 }
