--- a/app/styles/components/products/_productCard.scss
+++ b/app/styles/components/products/_productCard.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 350px;
     // background-color: $bg-secondary;
-    border: gray 1px solid;
+    // border: gray 1px solid;
     border-radius: 10px;            
     box-shadow: $shadow-md;
     overflow: hidden;
@@ -38,10 +38,13 @@
     }
 
     &__title {
-        font-size: $text-lg;
+        font-size: $text-base;
         font-weight: 600;
         color: $color-main;
         padding-bottom: 5px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
     &__rate {
