Making double price range

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -31,6 +31,7 @@
         'components/modal',
         'components/counter',
         'components/userMenu',
+        'components/priceRange',
 
 
         // Drawer Views
