Making cart functionality

--- a/app/styles/components/cart/cartItem.scss
+++ b/app/styles/components/cart/cartItem.scss
@@ -15,6 +15,7 @@
         position: relative;
         overflow: hidden;
         border-radius: $rounded-md;
+        cursor: pointer;
 
         & > img {
             object-fit: contain;
