--- a/app/styles/components/cart/cart.scss
+++ b/app/styles/components/cart/cart.scss
@@ -1,5 +1,5 @@
 .cart {
-    width: 380px;
+    width: 400px;
     height: $full;
     background: $bg-main;
     display: flex;
@@ -33,10 +33,35 @@
             padding: 16px;
             background-color: $bg-dark;
             border-radius: $rounded-md;
+            border: none;
             color: white;
             display: flex;
             justify-content: space-between;
             cursor: pointer;
+            position: relative;
+
+            &:disabled {
+                background-color: rgb(115, 114, 114); 
+                cursor: auto; 
+                
+                &:hover {
+                    background-color: rgb(115, 114, 114);  
+                }
+            }
+
+            .disable {
+                display: none;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;  
+                background-color: rgba(115, 114, 114, 0.397);     
+            }
+
+            &.disabled .disable {
+                display: block;
+            }
 
             & > div {padding-right: 20px;
                 border-right: 1px solid white;
@@ -47,4 +72,14 @@
             }
         }
     }
+}
+
+.empty-cart {
+    height: 100%;
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
 }
