Making checkout modal ui

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -32,6 +32,8 @@
         'components/counter',
         'components/userMenu',
         'components/priceRange',
+        'components/modalHeading',
+        'components/paymentCard',
 
 
         // Drawer Views
@@ -44,6 +46,9 @@
         // Cart
         'components/cart/cart',
         'components/cart/cartItem',
+
+        // Checkout
+        'components/checkout/checkout',
 
         // Banners
         'components/banners/doubleBanner',
