Making account orders managing

--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -36,4 +36,11 @@ fieldset {
 }
 
 
+.title {
+    margin-bottom: 40px;
+    font-size: $text-2xl;
+    font-weight: bold;
+    // mb-6 text-lg font-bold md:text-xl xl:text-2xl text-heading xl:mb-8
+}
+
 
