--- a/app/styles/abstracts/_variables.scss
+++ b/app/styles/abstracts/_variables.scss
@@ -24,6 +24,10 @@ $border: 1px;
 $btn_bg_main: #262626;
 $btn_bg_secondary: #f8f8fa;
 $btn_bg_white: #ffffff;
+$btn_bg_success: #34c38f;
+$btn_bg_info: #50a5f1;
+$btn_bg_warning: #f1b44c;
+$btn_bg_danger: #f46a6a;
 
 // Shadow
 $shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
