Making add to favorites functionality

--- a/app/styles/pages/_account.scss
+++ b/app/styles/pages/_account.scss
@@ -112,3 +112,11 @@
         }
     }
 }
+
+.account .favorites {
+    &-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: $gap-20
+    }
+}
