--- a/app/styles/components/products/_productCard.scss
+++ b/app/styles/components/products/_productCard.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 350px;
     // background-color: $bg-secondary;
-    // border: gray 1px solid;
+    // border: rgba(239, 239, 239, 0.451) 1px solid;
     border-radius: 10px;            
     box-shadow: $shadow-md;
     overflow: hidden;
@@ -33,8 +33,8 @@
     &__image {
         width: $full;
         height: $full;
-        object-fit: contain;
-        padding: 20px;
+        object-fit: cover;
+        // padding: 20px;
     }
 
     &__title {
