Making Related products slider

--- a/app/styles/components/_loader.scss
+++ b/app/styles/components/_loader.scss
@@ -10,6 +10,7 @@
 .loader__wrapper {
     width: $full;
     height: $full;
+    max-width: 900px;
     display: flex;
     align-items: center;
     justify-content: center;
