--- a/app/styles/components/_categories.scss
+++ b/app/styles/components/_categories.scss
@@ -53,6 +53,6 @@
 .categories__content {
     padding: 40px 0px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     gap: $gap-30;
 }
