Making Confirmation modal

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -44,6 +44,9 @@
         'components/modal/loginView',
         'components/modal/orderInfoView',
 
+        // Confirmation Modal
+        'components/confirmationModal/confirmationModal',
+
         // Cart
         'components/cart/cart',
         'components/cart/cartItem',
