--- a/app/styles/pages/_account.scss
+++ b/app/styles/pages/_account.scss
@@ -78,7 +78,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                background-color: rgba(119, 255, 0, 0.339);
+                background-color: rgb(239, 239, 239);
                 
             }
             &__content {
