Making Mobile Menu

--- a/app/styles/abstracts/_variables.scss
+++ b/app/styles/abstracts/_variables.scss
@@ -40,3 +40,12 @@ $shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
 $shadow-none: 0 0 #0000;
 
 $full: 100%;
+
+// Breakpoints
+$xs: 0;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$xxl: 1400px;
+
