--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -35,6 +35,7 @@
         'components/modalHeading',
         'components/paymentCard',
         'components/mobileMenu',
+        'components/searchModal',
 
 
         // Drawer Views
