--- a/app/styles/components/_search.scss
+++ b/app/styles/components/_search.scss
@@ -1,5 +1,5 @@
 .search-input {
-    width: 500px;
+    max-width: 500px;
     height: 40px;
     display: flex;
     border: 1.5px solid $color-main;
