--- a/app/styles/components/_heading.scss
+++ b/app/styles/components/_heading.scss
@@ -19,6 +19,10 @@
         &.left {
             flex-direction: row;
         }
+
+        @include _lg {
+            font-size: $text-3xl;
+        }
     }
 
     &__title-wrapper {
