--- a/app/styles/components/_categories.scss
+++ b/app/styles/components/_categories.scss
@@ -55,4 +55,16 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: $gap-30;
+
+    @include _lg {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include _md {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include _sm {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
