--- a/app/styles/components/_discount.scss
+++ b/app/styles/components/_discount.scss
@@ -13,28 +13,45 @@
             height: 80%;
             display: flex;
             position: relative;
+
+            @include _md {
+                height: 100%;
+                flex-direction: column;
+            }
         }
     }
 
     &__left {
-        width: 50%;
+        width: 100%;
         height: 100%;
         position: relative;
 
+        @include _md {
+            height: 300px;
+        }
+
         & span {
-         position: absolute;
-         top: -58px;
-         right: 0;
-         font-size: 100px;
-         color: $color-main;      
+            position: absolute;
+            top: -58px;
+            right: 0;
+            font-size: 100px;
+            color: $color-main;
+            
+            @include _md {
+                display: none;
+            }
         }
     }
     
     &__right {
         height: 100%;
-        width: 50%;
+        width: 100%;
         position: relative;
         background-color: $bg-dark;
+
+        @include _md {
+            height: 300px;
+        }
 
         &-inner {
             width: 100%;
@@ -48,18 +65,31 @@
         &-title {
             color: $color-white;
             font-size: $text-5xl;
+            text-align: center;
+
+            @include _md {
+                font-size: $text-4xl;
+            }
         }
 
         &-subtitle {
             color: $color-white;
             font-size: $text-xl;
             padding-bottom: 10px;
+
+            @include _md {
+                font-size: $text-2xl;
+            }
         }
 
         .ount {
             position: absolute;
             top: -58px;
             left: 0;
+
+            @include _md {
+                display: none;
+            }
             
             &__inner {
                 width: 100%;
@@ -87,8 +117,9 @@
     }
 
     &__sale-bage {
-        width: 200px;
-        height: 70px;
+        // width: 200px;
+        // height: 70px;
+        padding: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -104,6 +135,11 @@
         & span {
             color: white;
             text-shadow: -1px 0 $color-main, 0 1px $color-main, 1px 0 $color-main, 0 -1px $color-main;
+        }
+
+        @include _lg {
+           padding: 15px; 
+           font-size: $text-2xl;
         }
     }
 
