--- a/app/styles/components/filters/_collectionFilters.scss
+++ b/app/styles/components/filters/_collectionFilters.scss
@@ -1,10 +1,25 @@
 .collection-filters {
     width: 300px;
     height: auto;
+    background: rgb(255, 255, 255);
 
     &__header {
         width: 100%;
         height: 50px;
         font-size: 25px;
+    }
+
+    &.main {
+        @include _lg {
+            display: none;
+            // position: absolute;
+            // top: 0;
+            // left: 0;
+            // padding: 10px 20px;
+            // border: 1px solid $color-main;
+            // border-radius: 10px;
+            // background-color: #fff;
+            // z-index: 1;
+        }
     }
 }
