--- a/app/styles/components/products/_productGrid.scss
+++ b/app/styles/components/products/_productGrid.scss
@@ -5,4 +5,12 @@
     grid-template-columns: repeat(3, 1fr);
     gap: $gap-20;
     padding: 30px;
+
+    @include _md {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include _base {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
