--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -40,6 +40,7 @@
 
         // Drawer Views
         'components/drawerViews/cart',
+        'components/drawerViews/filterDrawer',
 
         // Modal Views
         'components/modal/registerView',
