Making Prodcut page responsive

--- a/app/styles/components/_heading.scss
+++ b/app/styles/components/_heading.scss
@@ -44,6 +44,10 @@
 
     &__link {
         font-size: $text-base;
+        
+        @include _md {
+            display: none;
+        }
     }
 }
 
