--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -79,7 +79,8 @@
         'components/products/productDetailsGallery',
         'components/products/productOptions',
         'components/products/productSingleDetails',
-        'components/products/productCard';
+        'components/products/productCard',
+        'components/products/productGallerySlider';
 
 @import 'pages/products',
         'pages/account',
